Add SSE for add servers (BETA)
